Fri Aug 18 17:22:08 UTC 2006  Steve Huston  <shuston@riverace.com>

        * ace/OS_NS_unistd.cpp (pwrite): Corrected the large-file-offset
          logic to build correctly for Windows. Also moved the explicit
          SetFilePointerEx() before WriteFile() to the non-ACE_HAS_WINNT4
          section - for ACE_HAS_WINNT4 the supplied OVERLAPPED structure
          carries the file offset to write at.

Fri Aug 18 17:08:35 UTC 2006  Yan Dai  <dai_y@ociweb.com>

        * bin/tao_orb_tests.lst

          Added DII collocation oneway test. This is the regression test
          for bugzilla #2545.

Fri Aug 18 15:49:01 UTC 2006  Steve Huston  <shuston@riverace.com>

        * examples/APG/Logging/Trace.h: Changed the varargs form used in the
          macros from ##__VA_ARGS__ to ,__VA_ARGS__ in an effort to conform
          to C99 and clear some compile warnings from gcc4. This effectively
          prohibits leaving the varargs out completely from the macro
          invocation but that use-case isn't exercised anyway.

        * bin/ace_tests.lst: Add protocols/tests/RMCast/run_test.pl to run
          RMCast tests, except ACE_FOR_TAO builds.

Fri Aug 18 12:03:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Don't run Bug_2510_Regression in a ST build, it uses threading

        * bin/MakeProjectCreator/templates/bor.mpd:
          Don't print a message with the dummy realclean

Thu Aug 17 14:20:00 UTC 2006  Simon Massey  <sma@prismtech.com>

        * apps/drwho/Binary_Search.cpp:
        * apps/drwho/CM_Client.cpp:
        * apps/drwho/CM_Server.cpp:
        * apps/drwho/Hash_Table.cpp:
        * apps/drwho/Options.cpp:
        * apps/drwho/Options.h:
        * apps/drwho/PMC_All.cpp:
        * apps/drwho/PMC_Flo.cpp:
        * apps/drwho/PMC_Ruser.cpp:
        * apps/drwho/PMC_Usr.cpp:
        * apps/drwho/PMS_All.cpp:
        * apps/drwho/PMS_Flo.cpp:
        * apps/drwho/PMS_Ruser.cpp: